功能(文档服务): 完成文档服务及文件下载功能